tests/files/type_checker_tests/should_fail/222.cmdr
//Should not be able to use type variable inappropriately
type myType = int;
println myType;